fixed svg not showing on build

--- a/src/assets/scss/components/home/hero.scss
+++ b/src/assets/scss/components/home/hero.scss
@@ -198,13 +198,13 @@
                 &--green {
                     color: #60d39c;
                     &::before {
-                        background: url('../assets/icons/green-arrow-up.svg');
+                        background: url('/assets/icons/green-arrow-up.svg');
                     }
                 }
                 &--red {
                     color: #e35454;
                     &::before {
-                        background: url('../assets/icons/red-arrow-down.svg');
+                        background: url('/assets/icons/red-arrow-down.svg');
                     }
                 }
                 &--green::before,
